<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">>
    <string name="hint_operator_name">你好</string>
    <string name="hello">Hello World, Date!</string>
    <string name="app_name">停了么</string>
    <string name="strInputAccHint">输入帐号</string>
    <string name="strAccInputLabel">帐号</string>
    <string name="strPswInputLabel">密码</string>
    <string name="login">登 录</string>
    <string name="register">注 册</string>
    <string name="cancel">取 消</string>
    <string name="mobile_empty">手机号为空，请重新输入！</string>
    <string name="newNickname_empty">新昵称为空，请重新输入！</string>>
    <string name="pwd_empty">密码为空，请重新输入！</string>
    <string name="pwd_not_fit_user">密码不正确，请重新输入！</string>
    <string name="pwd_new_empty">新密码为空，请重新输入！</string>
    <string name="pwd_check_empty">密码确认为空，请重新输入！</string>
    <string name="pwd_not_the_same">密码确认不正确，请重新输入密码！</string>
    <string name="remark_empty">车辆备注为空，请重新输入！</string>
    <string name="plate_number_empty">车牌号为空，请重新输入！</string>
    <string name="register_fail">注册用户失败，请重新尝试！</string>
    <string name="register_success">注册成功！</string>
    <string name="resetpwd_fail">密码修改失败，请重新尝试！</string>
    <string name="resetpwd_success">密码修改成功！</string>
    <string name="login_success">登陆成功！</string>
    <string name="cancel_success">注销成功！</string>
    <string name="login_fail">登录失败！请输入正确的用户名与密码！</string>
    <string name="cancel_fail">注销失败！请输入正确的用户名与密码！</string>
    <string name="mobile_already_exist">手机号【<xliff:g example="tom" id="id1">%1$s</xliff:g>】已存在，请重新输入！</string>
    <string name="mobile_not_exist">手机号【<xliff:g example="tom" id="id1">%1$s</xliff:g>】不存在，请重新输入！</string>
    <string name="user_login_success">用户：<xliff:g example="tom" id="id2">%1$s</xliff:g>登录，欢迎光临！</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">设置</string>
    <string name="click_login">点击头像登录</string>
    <string name="user_login">用户登录</string>
    <string name="snackbar_indefinitely">无限期显示Snackbar</string>
    <string name="snackbar_long">在Long时间段内显示Snackbar</string>
    <string name="snackbar_short">在short时间段内显示Snackbar</string>
    <string name="snackbar_action">设置Snackbar的action</string>
    <string name="snackbar_color">自定义Snackbar的文字颜色</string>

    <string name="send">提交</string>
    <string name="send_success">成功提交</string>
    <string name="network_error">网络错误</string>

    <!--停车交易状态 -->
    <string name="tradingStatus0">无进入停车场记录</string>
    <string name="tradingStatus1">余额不足，请充值</string>
    <string name="tradingStatus2">扣费失败，请稍后重试</string>
    <string name="tradingStatus3">存入离开停车场时间失败</string>
    <string name="tradingStatus4">存入停车交易记录失败</string>
    <string name="park_history">停车历史</string>
    <string name="my_cars">我的车辆</string>
    <string name="message_center">消息中心</string>
    <string name="feedback">意见反馈</string>
    <string name="settings">设置</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="phone_ZhangLin">张琳：18782003437</string>
    <string name="phone_RongYuting">荣誉婷：18780073534</string>
    <string name="phone_LiangJiacheng">梁家铖：15520702168</string>
    <string name="phone_CaiChuang">蔡创：13551374417</string>
    <string name="backout_string">撤销</string>
</resources>
