<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_history"
            android:title="@string/park_history"
            android:icon="@mipmap/icons8_order_history_filled_50"/>
        <item
            android:id="@+id/nav_car"
            android:title="@string/my_cars"
            android:icon="@mipmap/icons8_automotive_50"/>
        <item
            android:id="@+id/nav_message"
            android:title="@string/message_center"
            android:icon="@mipmap/icons8_group_message_filled_50"/>
        <item
            android:id="@+id/nav_suggestion"
            android:title="@string/feedback"
            android:icon="@mipmap/icons8_feedback_50"/>
        <item
            android:id="@+id/nav_setting"
            android:title="@string/settings"
            android:icon="@mipmap/icons8_automatic_50"/>

    </group>
</menu>
